---------------------------------------------------------------------------------------------------
Version: 0.16.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.16.0
Date: 2023-01-07
  Features:
    - More flexible blueprint settings
    - Blueprints: added option to only include entities changed in the last <n> stages
    - Added ability to reorder staged builds in the staged-builds list
---------------------------------------------------------------------------------------------------
Version: 0.15.2
Date: 2023-01-03
  Changes:
    - The Staged build settings window is brought to the "front" of the gui when opened.
---------------------------------------------------------------------------------------------------
Version: 0.15.1
Date: 2022-12-23
  Bugfixes:
    - Actually include the new GUI in the packaged mod...
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 2022-12-23
  Changes:
    - Rehauled the GUI.
  Minor Features:
    - Nothing important
---------------------------------------------------------------------------------------------------
Version: 0.14.7
Date: 2022-12-13
  Bugfixes:
    - Fix error when overbuilding an underground preview entity.
---------------------------------------------------------------------------------------------------
Version: 0.14.6
Date: 2022-12-13
  Bugfixes:
    - Fix issues with assembling machines being rotated via blueprint pasting.
    - Fix startup crash with modded entities having very large selection boxes.
---------------------------------------------------------------------------------------------------
Version: 0.14.5
Date: 2022-12-09
  Bugfixes:
    - Fix update when dropping modules in machines
---------------------------------------------------------------------------------------------------
Version: 0.14.4
Date: 2022-12-05
  Features: